--- a/wallet.html
+++ b/wallet.html
@@ -1292,8 +1292,62 @@
                     <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Trust Wallet</div>
                   </div>
 
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/novawallet.png" alt="Nova Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Nova Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/transitswapwallet.png" alt="TransitSwap Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">TransitSwap Wallet</div>
+                  </div>
 
 
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/eternl.png" alt="Eternl Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Eternl Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/keypalwallet.png" alt="Keypal Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Keypal Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/grinddery.png" alt="Grindery Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Grindery Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/fearlesswallet.png" alt="Fearless Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Fearless Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/subwallet.png" alt="Sub Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Sub Wallet</div>
+                  </div>
+
+                     <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
+                    <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
+                      <img class="img_icons" src="logo/lg/aqua.png" alt="Aqua Wallet">
+                    </div>
+                    <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Aqua Wallet</div>
+                  </div>
 
                   <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
                     <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
