--- a/wallet.html
+++ b/wallet.html
@@ -1309,7 +1309,7 @@
 
                      <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
                     <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
-                      <img class="img_icons" src="logo/lg/eternl.png" alt="Eternl Wallet">
+                      <img class="img_icons" src="logo/lg/eternl.jpg" alt="Eternl Wallet">
                     </div>
                     <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Eternl Wallet</div>
                   </div>
@@ -1337,7 +1337,7 @@
 
                      <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
                     <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
-                      <img class="img_icons" src="logo/lg/subwallet.png" alt="Sub Wallet">
+                      <img class="img_icons" src="logo/lg/subwallet.jpg" alt="Sub Wallet">
                     </div>
                     <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Sub Wallet</div>
                   </div>
