--- a/wallet.html
+++ b/wallet.html
@@ -1323,7 +1323,7 @@
 
                      <div class="pageStyles__SApp-sc-1navawn-5 cmAzHq">
                     <div class="pageStyles__SAppIcon-sc-1navawn-6 kSIOSl">
-                      <img class="img_icons" src="logo/lg/grinddery.png" alt="Grindery Wallet">
+                      <img class="img_icons" src="logo/lg/grindery.png" alt="Grindery Wallet">
                     </div>
                     <div class="pageStyles__SAppName-sc-1navawn-7 eodRCW">Grindery Wallet</div>
                   </div>
